# bandbox

./: .env.example  .gitignore  .prettierignore  .prettierrc  Caddyfile  Dockerfile  LICENSE.md  README.md  docker-compose.yml  eslint.config.js  package.json  svelte.config.js  vite.config.ts
docs/: AUDIO_ANALYSIS.md  IMPLEMENTATION.md
pi/: README.md  bandbox.py  bandbox.service  install.sh
python-worker/: Dockerfile  pyproject.toml
python-worker/src/: __main__.py  analyze.py  convex_client.py  encode.py  group.py  match.py  normalize.py  trim.py  worker.py
src/: app.html  hooks.server.ts
src/convex/: http.ts  recordings.ts  riffs.ts  schema.ts  seed.ts  sets.ts  songs.ts  systemWarnings.ts
src/convex/_generated/: api.d.ts
src/lib/: types.ts
src/lib/components/: AudioPlayer.svelte  ProcessingBadge.svelte  ProcessingBanner.svelte  RecordingCard.svelte  SongGroup.svelte  TrimReview.svelte
src/lib/server/: env.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/api/audio/[...path]/: +server.ts
src/routes/api/upload/: +server.ts
src/routes/song/[id]/: +page.svelte
static/: site.webmanifest
