[project]
name = "bandbox-worker"
version = "0.2.0"
description = "Audio processing pipeline for BandBox"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "librosa>=0.10",
    "soundfile>=0.13",
    "pyloudnorm>=0.1",
    "httpx>=0.28",
    "madmom>=0.17",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9",
]
